--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
 }
 
 #gift-icon:hover {
-    animation: shake 0.7s; 
-    animation-iteration-count: infinite; 
+    animation: shake 0.7s;
+    animation-iteration-count: infinite;
 }
 
 @keyframes shake {
@@ -23,4 +23,11 @@
     80% { transform: translate(-1px, -1px) rotate(1deg); }
     90% { transform: translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+/* matt css */
+.gift-list li img {
+  display: block;
+  width: 100%;
+  height: auto;
 }
