--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,8 @@
     90% { transform: translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
+#gift_image{
+
+    width: 200px;
+    height: 200px;
+}
